--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ footer .bottom-section .social-section a:hover {
     width: 607px;
     height: 610px;
     right: -217px;
-    top: -11px;
+    top: 50px;
     filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.25));
   }
 
@@ -449,6 +449,8 @@ footer .bottom-section .social-section a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--w);
+    z-index: 5;
   }
 
   footer .top-section {
@@ -711,7 +713,7 @@ footer .bottom-section .social-section a:hover {
     width: 607px;
     height: 610px;
     right: -217px;
-    top: -11px;
+    top: 50px;
     filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.25));
   }
 
@@ -871,6 +873,8 @@ footer .bottom-section .social-section a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--w);
+    z-index: 5;
   }
 
   footer .top-section {
@@ -1131,7 +1135,7 @@ footer .bottom-section .social-section a:hover {
     width: 707px;
     height: 710px;
     left: 1417px;
-    top: -31px;
+    top: 50px;
     filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.25));
   }
 
@@ -1292,6 +1296,8 @@ footer .bottom-section .social-section a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-color: var(--w);
+    z-index: 5;
   }
 
   footer .top-section {
